# gridx2

./: Cargo.toml  LICENSE  README.md
src/: accordion_widget.rs  app_config.rs  entry.rs  image_cache.rs  image_entry.rs  image_widget.rs  main.rs  settings_window.rs  style.css
