[package]
name = "gridx2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
gtk4 = { version = "0.9.6", features = ["v4_10"] }
home = "0.5.11"
image = "0.25.6"
lru = "0.14.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
walkdir = "2.5.0"
